; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/line6/extr_audio.c_line6_register_audio.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/line6/extr_audio.c_line6_register_audio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_line6 = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @line6_register_audio(%struct.usb_line6* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.usb_line6*, align 8
  %4 = alloca i32, align 4
  store %struct.usb_line6* %0, %struct.usb_line6** %3, align 8
  %5 = load %struct.usb_line6*, %struct.usb_line6** %3, align 8
  %6 = getelementptr inbounds %struct.usb_line6, %struct.usb_line6* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @snd_card_register(i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* %4, align 4
  store i32 %12, i32* %2, align 4
  br label %14

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %14

14:                                               ; preds = %13, %11
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @snd_card_register(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
